# C_CPP_Template

./: .gitignore  CMakeLists.txt  Makefile
App/: CMakeLists.txt  config.cmake
App/Include/: AutoConfig_dsrw.h  RegEdit.h
App/Source/: RegEdit.cpp  main.cpp
CMake/: rule.cmake
CMake/AutoConfig/: AutoConfig.cmake  MIT_License.txt
CMake/ToolChain/clang/: RuleOverride.cmake  Target.cmake  ToolChain.cmake
Lib/: CMakeLists.txt  config.cmake  source.cmake
PlatformTempalte/: WinMain.cpp
Source/: main.cpp
Template/: Makefile
Template/.props/: 00_common.mk  04_defines.mk  addxxxfix.mk  asm_options.mk  autoconf.mk  basic_config.mk  build_path.mk  common.mk  config.mk  linker_options.mk  path.mk  toolchain.mk
Template/include/: autoconf.h
Template/source/: main.c
